--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,8 @@ dependencies:
   firebase_auth: ^4.0.0
   cloud_firestore: ^4.0.0
   smooth_page_indicator: ^1.1.0
+  email_validator: ^2.1.17
   intl: ^0.17.0
-  email_validator: ^3.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -82,38 +82,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-fonts:
-    - family: OpenSans
-      fonts:
-        - asset: fonts/OpenSans-Bold.ttf
-    - family: OpenSans Medium
-      fonts:
-        - asset: fonts/OpenSans-Medium.ttf
-          weight: 700
-    - family: OpenSans Regular
-      fonts:
-        - asset: fonts/OpenSans-Regular.ttf
-          weight: 700
-    - family: OpenSans SemiBold
-      fonts:
-        - asset: fonts/OpenSans-SemiBold.ttf
-          weight: 700
-    - family: Montserrat Bold
-      fonts:
-        - asset: fonts/Montserrat-Bold.ttf
-          weight: 700  
-    - family: Montserrat SemiBold
-      fonts:
-        - asset: fonts/Montserrat-SemiBold.ttf
-          weight: 700   
-    - family: Montserrat Regular
-      fonts:
-        - asset: fonts/Montserrat-Regular.ttf
-          weight: 700
-    - family: Montserrat Medium
-      fonts:
-        - asset: fonts/Montserrat-Medium.ttf
-          weight: 700 
+  # fonts:
+  #   - family: Schyler
+  #     fonts:
+  #       - asset: fonts/Schyler-Regular.ttf
+  #       - asset: fonts/Schyler-Italic.ttf
+  #         style: italic
+  #   - family: Trajan Pro
+  #     fonts:
+  #       - asset: fonts/TrajanPro.ttf
+  #       - asset: fonts/TrajanPro_Bold.ttf
+  #         weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
