--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   cloud_firestore: ^4.0.0
   smooth_page_indicator: ^1.1.0
   email_validator: ^2.1.17
-  intl: ^0.17.0
+  #intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
